# rust-sendmail

./: Cargo.toml  LICENSE  README.md  email.txt
Example/: main.rs
Example/src/: main.rs
examples/: main.rs
src/: lib.rs
src/email/: mod.rs
