[package]
name = "sendmail"
version = "2.0.0"
authors = ["Aron Heinecke<aron.heinecke@t-online.de>","Alexander Elias<alex.steven.elias@gmail.com>"]

description = "Rust sending emails via sendmail. Works nicely with Iron Framework using form Posts."

repository = "https://github.com/AlexanderElias/rust-sendmail"

readme = "README.md"

keywords = ["Rust","Sendmail","Email"]

license-file = "LICENSE"
